--- a/frontend/redux/package.json
+++ b/frontend/redux/package.json
@@ -22,6 +22,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
