--- a/frontend/react-redux/package.json
+++ b/frontend/react-redux/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "webpack": "^4.14.0",
