--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Stephen Bau",
+  "description": "Learning about APIs and Microservices with freeCodeCamp",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
