Add license to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Stephen Bau",
   "description": "Learning about APIs and Microservices with freeCodeCamp",
   "keywords": [ "node", "npm", "api", "microservice", "freecodecamp" ],
+  "license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
